--- a/GUI/App.axaml
+++ b/GUI/App.axaml
@@ -9,5 +9,7 @@
     <Application.Styles>
 		<FluentTheme Mode="Light"/>
 		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+		<StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+		<StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
     </Application.Styles>
 </Application>
