refs #11 make sure horizonral scrollbar is always on screen

--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -78,7 +78,7 @@
 				</StackPanel>
 			</Grid>
 
-			<DataGrid Name="LogDataGrid" Items="{Binding PlotLogs}" IsReadOnly="true" MinHeight="600" CanUserSortColumns="True">
+			<DataGrid Name="LogDataGrid" Items="{Binding PlotLogs}" IsReadOnly="true" MinHeight="80" CanUserSortColumns="true">
 				<DataGrid.Columns>
 					<DataGridTemplateColumn>
 						<DataGridTemplateColumn.Header>
