--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -17,6 +17,7 @@
         <Style Selector="CheckBox">
             <Setter Property="Foreground" Value="LightGray" />
         </Style>
+
         <Style Selector="CheckBox TextBlock">
             <Setter Property="Foreground" Value="LightGray" />
         </Style>
@@ -55,7 +56,7 @@
 			<Setter Property="Margin" Value="0"/>
 		</Style>
 		<Style Selector="DataGrid TextBlock">
-			<Setter Property="Margin" Value="1"/>
+			<Setter Property="Margin" Value="0"/>
 			<Setter Property="FontSize" Value="10"/>
 		</Style>
 		<Style Selector="ToolTip">
@@ -67,6 +68,50 @@
 			<Setter Property="MaxHeight" Value="600"/>
 			<Setter Property="FontSize" Value="9.3"/>
 			<Setter Property="TextWrapping" Value="Wrap"/>
+		</Style>
+		<Style Selector="ComboBox">
+			<Setter Property="BorderThickness" Value="0" />
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderLowBrush}" />
+			<Setter Property="Padding" Value="10" />
+		</Style>
+		<Style Selector="ComboBox /template/ Border">
+			<Setter Property="CornerRadius" Value="5" />
+		</Style>
+		<Style Selector="ComboBox:pointerover /template/ Border">
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderMidBrush}" />
+		</Style>
+		<Style Selector="ComboBox:pointerover:focus /template/ Border">
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderMidBrush}" />
+		</Style>
+
+		<Style Selector="ComboBoxItem">
+			<Setter Property="Padding" Value="5" />
+		</Style>
+		<Style Selector="ComboBoxItem:selected > TextBlock">
+			<Setter Property="Foreground" Value="{DynamicResource HighlightForegroundBrush}" />
+		</Style>
+		<Style Selector="TextBox">
+			<Setter Property="FontFamily" Value="Ubuntu" />
+			<Setter Property="BorderThickness" Value="0" />
+			<Setter Property="Foreground" Value="{DynamicResource ThemeForegroundBrush}" />
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderLowBrush}" />
+			<Setter Property="Padding" Value="10" />
+			<Setter Property="Margin" Value="0 5" />
+		</Style>
+		<Style Selector="TextBox /template/ Border">
+			<Setter Property="CornerRadius" Value="5" />
+		</Style>
+		<Style Selector="TextBox:pointerover /template/ Border">
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderMidBrush}" />
+		</Style>
+		<Style Selector="TextBox:focus /template/ Border">
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderMidBrush}" />
+		</Style>
+		<Style Selector="CheckBox">
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderLowBrush}" />
+		</Style>
+		<Style Selector="CheckBox:pointerover">
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderMidBrush}" />
 		</Style>
 	</Window.Styles>
 
