--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -1,14 +1,14 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:ChiaPlottStatusAvalonia.ViewModels"
+        xmlns:vm="using:ChiaPlotStatus.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="700"
-        x:Class="ChiaPlottStatusAvalonia.Views.MainWindow"
+        x:Class="ChiaPlotStatus.Views.MainWindow"
         Icon="/Assets/Logo.png"
         TransparencyLevelHint="Transparent"
         ExtendClientAreaToDecorationsHint="False"
-        Title="ChiaPlottStatusAvalonia">
+        Title="Chia Plot Status">
 
 	<Window.DataContext>
 		<vm:MainWindowViewModel/>
