--- a/GUI/App.axaml
+++ b/GUI/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:ChiaPlottStatusAvalonia"
-             x:Class="ChiaPlottStatusAvalonia.App">
+             xmlns:local="using:ChiaPlotStatus"
+             x:Class="ChiaPlotStatus.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
