refs #14 styling reworked, fluent thrown out as it caused a lot of problems

--- a/GUI/App.axaml
+++ b/GUI/App.axaml
@@ -7,9 +7,13 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-		<FluentTheme Mode="Light"/>
+		<StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
 		<StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
+		<!--
+		<FluentTheme Mode="Light"/>
 		<StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
 		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
+		-->
     </Application.Styles>
 </Application>
